[gd_scene load_steps=2 format=3 uid="uid://dy4gqxbk3i58q"]

[ext_resource type="Script" path="res://CanvasLayer.gd" id="1_gwbwh"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_gwbwh")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.0
offset_top = -48.0
offset_right = 121.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="Dash" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.19
anchor_top = 0.86
anchor_right = 0.19
anchor_bottom = 0.86
offset_left = -64.88
offset_top = 9.71999
offset_right = 36.12
offset_bottom = 47.72
theme_override_font_sizes/font_size = 24
text = "Dash"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DashTimer" type="Label" parent="Dash"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.069
anchor_top = 1.0
anchor_right = 0.069
anchor_bottom = 1.0
offset_left = 10.996
offset_top = -12.0
offset_right = 70.996
offset_bottom = 55.0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cooldown" type="Label" parent="."]
anchors_preset = -1
anchor_left = -2.35
anchor_top = 3.08
anchor_right = -2.35
anchor_bottom = 3.08
offset_left = 2719.2
offset_top = -1428.84
offset_right = 2869.2
offset_bottom = -1388.84
theme_override_font_sizes/font_size = 24
text = "Cooldown
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DashCooldown" type="Label" parent="Cooldown"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.319
anchor_top = 0.851
anchor_right = 0.319
anchor_bottom = 0.851
offset_left = -3.85
offset_top = -10.04
offset_right = 56.15
offset_bottom = 57.96
grow_vertical = 0
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StopButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -42.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Stop
"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
